ok now lets see if this works

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,16 +91,16 @@ markdown_extensions:
 
 plugins:
   - blog
-    post_date_format: full
-    post_readtime: true
-    categories: true
-    authors: true
+  - post_date_format: full
+  - post_readtime: true
+  - categories: true
+  - authors: true
   - privacy
   - search
   - social
-   - cards: true
+  - cards: true
   - tags
-   - git-revision-date-localized:
+  - git-revision-date-localized:
       enable_creation_date: true
 
 
