--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,8 +97,7 @@ plugins:
     authors: true
   - privacy
   - search
-  - social:
-    cards: true
+  - social
   - tags
   - git-revision-date-localized:
     enable_creation_date: true
