--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,11 +90,11 @@ markdown_extensions:
 
 
 plugins:
-  - blog:
-    post_date_format: full
-    post_readtime: true
-    categories: true
-    authors: true
+  - blog
+   # post_date_format: full
+    #post_readtime: true
+    #categories: true
+    #authors: true
   - privacy
   - search
   - social
