--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ theme:
   name: material
   font:
     text: Montserrat
-    code: Source Code Pro
+    code: Red Hat Mono
   logo: https://static.wixstatic.com/media/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
   favicon: https://static.wixstatic.com/media/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
   icon:
@@ -91,16 +91,12 @@ markdown_extensions:
 
 plugins:
   - blog
-   # post_date_format: full
-    #post_readtime: true
-    #categories: true
-    #authors: true
   - privacy
   - search
   - social
   - tags
   - git-revision-date-localized:
-    enable_creation_date: true
+      enable_creation_date: true
 
 
 extra:
