--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,10 +93,10 @@ plugins:
   - blog
   - privacy
   - search
-  - social
+#  - social
   - tags
-  #- git-revision-date-localized:
-      #enable_creation_date: true
+#  - git-revision-date-localized:
+#      enable_creation_date: true
 
 
 extra:
