--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,10 +91,10 @@ markdown_extensions:
 
 plugins:
   - blog:
-   post_date_format: full
-   post_readtime: true
-   categories: true
-   authors: false
+    post_date_format: full
+    post_readtime: true
+    categories: true
+    authors: true
   - privacy
   - search
   - social:
