--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,14 +91,10 @@ markdown_extensions:
 
 plugins:
   - blog:
-    post_date_format: full
     post_readtime: true
-    categories: true
-    authors: true
   - privacy
   - search
-  - social:
-    cards: true
+  - social
   - tags
   - git-revision-date-localized:
       enable_creation_date: true
