--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,8 +95,8 @@ plugins:
   - search
   - social
   - tags
-  - git-revision-date-localized:
-      enable_creation_date: true
+  #- git-revision-date-localized:
+  #   enable_creation_date: true
 
 
 extra:
