--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,8 @@ theme:
   font:
     text: Montserrat
     code: Source Code Pro
-  logo: https://static.wixstatic.com/media/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
-  favicon: https://static.wixstatic.com/media/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
+  logo: assets/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
+  favicon: assets/12679b_f990c0dfc4744a7d828199dd2c91ea50~mv2.png
   icon:
     repo: fontawesome/brands/github
   palette:
