--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,6 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material
       - run: pip install "mkdocs-material[imaging]"
+      - run: pip install mkdocs-rss-plugin
       - run: pip3 install mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
