--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,10 @@ markdown_extensions:
 
 plugins:
   - blog
+  - rss:
+    match_path: blog/posts/.* 
+    date_from_meta:
+      as_creation: date
   - privacy
   - search
   - social
