--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,9 +19,9 @@ nav:
   - BRCRP: BRCRP/Placholder.md
   - MSRP: MSRP/Placholder.md
   - ScumCraft: index.md
-      Changelogs: 
-        Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
-        Version 5.0: ScumCraft/Change Logs/Version 5.0.md 
+    - Changelogs: 
+      Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
+      Version 5.0: ScumCraft/Change Logs/Version 5.0.md 
 
   - Blog:
     - Blog/index.md
