--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,15 +16,19 @@ nav:
             Placeholder: Hub/Transparency Reports/Incidents/Placholder.md
         - Inquiries: 
             Placeholder: Hub/Transparency Reports/Inquiries/Placholder.md
+
   - BRCRP: BRCRP/Placholder.md
+
   - MSRP: MSRP/Placholder.md
-    - ScumCraft: ScumCraft/index.md
+
+#  - ScumCraft: ScumCraft/index.md
       - Change logs: 
         Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
         Version 5.0: ScumCraft/Change Logs/Version 5.0.md 
 
   - Blog:
     - Blog/index.md
+
 theme:
   name: material
   font:
