--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,9 +22,9 @@ nav:
   - MSRP: MSRP/Placholder.md
 
 #  - ScumCraft: ScumCraft/index.md
-      - Change logs: 
-        Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
-        Version 5.0: ScumCraft/Change Logs/Version 5.0.md 
+#      - Change logs: 
+#        Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
+#        Version 5.0: ScumCraft/Change Logs/Version 5.0.md 
 
   - Blog:
     - Blog/index.md
