--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,9 +17,9 @@ nav:
         - Inquiries: 
             Placeholder: Hub/Transparency Reports/Inquiries/Placholder.md
 
-  - BRCRP: BRCRP/Placholder.md
+#  - BRCRP: BRCRP/Placholder.md
 
-  - MSRP: MSRP/Placholder.md
+#  - MSRP: MSRP/Placholder.md
 
 #  - ScumCraft: ScumCraft/index.md
 #     - Change logs: 
