--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
         - Inquiries:
             Placholder: Hub/Transparency Reports/Inquiries/Placeholder.md
 #  - BRCRP: BRCRP/Placeholder.md
-  - MSRP: MSRP/Placeholder.md
+#  - MSRP: MSRP/Placeholder.md
   - ScumCraft:
       - Overview: ScumCraft/index.md
       - Change Logs:
