Added the newest reports and some testing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,9 +13,9 @@ nav:
         - Community:
             Jan, 23 2025: Hub/Transparency Reports/Community/1-23-25.md
         - Incidents:
-            Placholder: Hub/Transparency Reports/Incidents/Placeholder.md
+            Feb,22 2025 PT1: Hub/Transparency Reports/Incidents/2-22-25_1.md
         - Inquiries:
-            Placholder: Hub/Transparency Reports/Inquiries/Placeholder.md
+            Feb, 22 2025 PT2: Hub/Transparency Reports/Inquiries/2-22-25_2.md
 #  - BRCRP: BRCRP/Placeholder.md
 #  - MSRP: MSRP/Placeholder.md
   - ScumCraft:
