Added Some New Pages and Sections (#3)
* Some Additions

Added Some pages for ScumCraft and Placeholder in places

* new pages should now be visible

* new pages should now be visible

FR this time

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Update mkdocs.yml

* Fixed placeholder pages

* Fixed Typos

* take 2 for new tabs

* Update fix a 404

* 404 fixes?

* no fr the 404 should be fixed

* Update mkdocs.yml

* Hide BRCRP

* Update mkdocs.yml

* Added the newest reports and some testing

* Update 2-22-25_1.md

* Update 2-22-25_1.md

* Update 2-22-25_1.md

* Update 2-22-25_2.md

* Files are now downloadable

* Updated Disclamers

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Shimmering Community Docs
 site_description: SCN Docs Project
-site_author: Shimmering Community
+site_author: starlight-community-network
 site_url: https://docs.starlightcommunity.network/
 repo_url: https://github.com/starlight-community-network/scn-docs
 repo_name: starlight-community-network/scn-docs
@@ -13,8 +13,17 @@ nav:
       - Transparency Reports:
         - Community:
             Jan, 23 2025: Hub/Transparency Reports/Community/1-23-25.md
-        #-Incidents:
-        #-Inquiries:
+        - Incidents:
+            Feb,22 2025 PT1: Hub/Transparency Reports/Incidents/2-22-25_1.md
+        - Inquiries:
+            Feb, 22 2025 PT2: Hub/Transparency Reports/Inquiries/2-22-25_2.md
+#  - BRCRP: BRCRP/Placeholder.md
+#  - MSRP: MSRP/Placeholder.md
+  - ScumCraft:
+      - Overview: ScumCraft/index.md
+      - Change Logs:
+          Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
+          Version 5.0: ScumCraft/Change Logs/Version 5.0.md
 
   - Blog:
     - blog/index.md
