--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,6 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install "mkdocs-material[imaging]"
       - run: pip install mkdocs-rss-plugin
+      - run: pip install mkdocs-glightbox
       - run: pip3 install mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
