Did some todo stuff anyways
- Renamed Version Reborn 5.1.md to Version Reborn 2025.8.md
- Made Version Reborn 2025.8 show in the menus

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ nav:
           Version 4.0–4.6: ScumCraft/Change Logs/Version 4.0–4.6.md
           Version 5.0: ScumCraft/Change Logs/Version 5.0.md
           Version 5.1: ScumCraft/Change Logs/Version 5.1.md
-#          Version Reborn:5.1: ScumCraft/Change Logs/Version Reborn 5.1
+          Version Reborn:2025.8: ScumCraft/Change Logs/Version Reborn 2025.8.md
   - Blog:
     - blog/index.md
   - Status: https://status.starlightcommunity.network
